--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,9 @@ body {
   --background-color: #757575;
   --back-color: #f5f4fa;
   --footer-color: #2f303a;
+  --social-links-color: #afb1b8;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-duration: transform 250ms;
 }
 ul,
 li,
@@ -84,6 +87,23 @@ a {
   text-decoration: none;
   color: var(--main-site-color);
 }
+.link-nav {
+  position: relative;
+}
+.link-nav::after:hover,
+.link-nav::after:focus {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--hover-focus-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+}
+
 .link:hover,
 .link:focus {
   color: var(--hover-focus-color);
@@ -96,6 +116,45 @@ a {
   height: 44px;
   border-radius: 50%;
   margin-right: 10px;
+  fill: var(--social-links-color);
+}
+.social-links:hover,
+.social-links:focus {
+  background-color: var(--hover-focus-color);
+  fill: var(--text-color);
+}
+.hover-svg {
+  fill: currentColor;
+}
+.social-links-footer {
+  color: var(--text-color);
+  fill: currentColor;
+  display: inline-flex;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  transition: background-color 250ms var(--timing-function);
+}
+.a-clients {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 90px;
+  color: var(--social-links-color);
+  border: 1px solid currentColor;
+  border-radius: 4px;
+  transition: color 250ms var(--timing-function),
+    border-color 250ms var(--timing-function);
+}
+.a-clients:hover,
+.a-clients:focus {
+  color: var(--hover-focus-color);
+  border-color: var(--hover-focus-color);
+}
+.button-icon {
+  fill: currentColor;
 }
 .phone-mail {
   font-family: Roboto;
@@ -150,7 +209,21 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-align: center;
-  padding-bottom: 94px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  padding: 27px;
+  color: var(--text-color);
+  line-height: 1.14;
+  background-image: linear-gradient(
+    rgba(47, 48, 58, 0.8),
+    rgba(47, 48, 58, 0.8)
+  );
+}
+.img-do {
+  display: block;
+  min-width: 100%;
+  height: auto;
 }
 .main-link-footer {
   font-family: Raleway;
@@ -247,7 +320,10 @@ a {
 .what-are-we-doing {
   display: flex;
 }
-.picture-what-are-we-doing:not(:last-child) {
+.li-what-are-we-doing {
+  position: relative;
+}
+.li-what-are-we-doing:not(:last-child) {
   margin-right: 30px;
 }
 .first-section-name {
@@ -276,12 +352,10 @@ a {
   margin-bottom: 94px;
 }
 .logo-clients {
-  display: flex;
-  width: 170px;
+  box-sizing: border-box;
+  margin-right: 30px;
   height: 90px;
-  background-color: var(--text-color);
-  align-items: center;
-  justify-content: center;
+  width: calc((100% - 150px) / 6);
 }
 .logo-clients:not(:last-child) {
   margin-right: 30px;
