--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,11 @@ li,
 a {
   list-style: none;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 * {
   margin: 0;
   padding: 0;
@@ -63,6 +68,10 @@ a {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--text-color);
+}
+.section {
+  padding-bottom: 94px;
+  padding-top: 94px;
 }
 .section-title {
   font-family: Roboto;
@@ -161,6 +170,7 @@ a {
   fill: currentColor;
   margin-left: 30px;
   margin-right: 10px;
+  vertical-align: middle;
 }
 .phone-mail {
   font-family: Roboto;
@@ -200,8 +210,10 @@ a {
   letter-spacing: 0.03em;
   color: var(--main-site-color);
   text-align: center;
-  margin-top: 30px;
   margin-bottom: 10px;
+}
+.team-card {
+  padding: 30px 32px 24px 32px;
 }
 .our-team {
   padding-top: 94px;
@@ -247,7 +259,6 @@ a {
 .address {
   color: var(--text-color);
   font-style: normal;
-  margin-right: 94px;
 }
 .footer-text {
   color: var(--text-color);
@@ -256,7 +267,6 @@ a {
   line-height: 0.87;
   text-transform: uppercase;
   margin-bottom: 20px;
-  margin-left: 90px;
 }
 .caption {
   font-weight: 700;
@@ -343,7 +353,6 @@ a {
 }
 .app-links {
   display: flex;
-  justify-content: center;
 }
 .team-info {
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -399,6 +408,8 @@ a {
 .radio-button {
   display: flex;
   justify-content: center;
+  padding-top: 94px;
+  padding-bottom: 56px;
 }
 .radio {
   background-color: var(--back-color);
@@ -409,7 +420,6 @@ a {
   border-radius: 4px;
   border-color: transparent;
   margin-left: auto;
-  margin-bottom: 56px;
 }
 .radio:not(:last-child) {
   margin-right: 30px;
